--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "material-react-table": "^2.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
     "react-hook-form": "^7.52.1",
+    "react-native-simple-gauge": "^0.3.1",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.12.2",
