--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
+    "react-gauge-component": "^1.2.21",
     "react-hook-form": "^7.52.1",
     "react-native-simple-gauge": "^0.3.1",
     "react-router-dom": "^6.24.1",
