--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "js-cookie": "^3.0.5",
     "material-react-table": "^2.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
